# fs-graph-viewer

./: package.json  postcss.config.cjs  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build_graph.rs  import.rs  main.rs  util.rs
src/bindings/: Leaf.ts  Node.ts
src/components/: Button.tsx  InteractionOutlet.tsx  PixiCanvas.tsx
src/components/settings/: darkmode-toggle.tsx  graph-settings.tsx  settings-container.tsx
src/features/: FolderTree.tsx  ImportFromFs.tsx  PixiCanvas.tsx
src/features/settings/: darkmode-toggle.tsx  settings-container.tsx
src/hooks/: events.ts  settings.ts  theme.ts
src/lib/: graph.ts
src/lib/d3/: model.ts  settings.ts  simulation.ts
src/lib/interaction/: interaction.ts
src/lib/pixi/: app.ts  items.ts  layers.ts  link.ts  node.ts  texture-cache.ts
src/lib/view/: helpers.ts  viewport.ts
